public/styles.css
html, body {
  font: 20px Montserrat, sans-serif;
  line-height: 1.8;
  color: #8c8c8c;
  width: 100%;
  height: 100%;
}

p {
  font-size: 16px;
}

.margin {
  margin-bottom: 45px;
}

#bg-pic {
  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) , url("/profile.jpg") center center;
  width: 100%;
  height: 100%;
  background-size: cover;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

#bg-1 {
  display: inline-table;
  background-color: #F1E9DA;
  color: black;
  width: 100%;
  height: 100%;
}

.aboutMeText {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  font-size: 1.5vw;
}

#bg-2 {
  display: inline-table;
  background-color: #546A7B;
  color: black;
  width: 100%;
  height: 100%;
}

#bg-2 #accordion .card {
  background-color: #546A7B;
}

.collapsed, .collapsed:hover, .card-header .btn-link  {
  color: black;
}

#threeSeventeenFont {
  font-size: 3.17em;
}

.i-am {
  font-size: 3em;
}

#bg-3 {
  display: inline-table;
  background-color: #F0FFF0;
  color: black;
  height: 100%;
}

#bg-4 {
  background-color: black;
  color: #8c8c8c;
  margin: auto;
  height: auto;
}

#bg-5 {
  background-color: rgb(241,241,241);
  color: #8c8c8c;
  width: 100%;
  height: auto;
}

.container-fluid {
  padding-top: 70px;
  padding-bottom: 70px;
}

#main-nav {
  padding-top: 15px;
  padding-bottom: 15px;
  border: 0;
  border-radius: 0;
  margin-bottom: 0;
  font-size: 12px;
  letter-spacing: 5px;
}

.typewriter>.txt {
  border-right: 0.2rem solid #777;
}

#main-nav .navbarNavDropdown .navbar-nav li a:hover {
  color: #1abc9c !important;
}

.watchLater, .case, .paragraphUtilities-depreceated, .paragraphUtilities, .lowercase, .leapYear, .helloName, .primalityChecker, .paceSeidenbergStemCamp2017, .todayIWill, .projectAutomation, .computerMode, .moodMail {
  width: 300px;
  height: 300px;
}

.projects {
  margin-bottom: 30px;
}

.thumb {
  width: 300px;
  height: 300px;
}

.hovereffect {
  width: 100%;
  height: 100%;
  float: left;
  overflow: hidden;
  position: relative;
  text-align: center;
  cursor: default;
}

.hovereffect .overlay {
  width: 100%;
  height: 100%;
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
}

.hovereffect .over {
  display: block;
  position: relative;
  -webkit-transition: all 0.4s ease-in;
  transition: all 0.4s ease-in;
}

.hovereffect:hover .over {
  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');
  filter: grayscale(1) blur(3px);
  -webkit-filter: grayscale(1) blur(3px);
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.hovereffect h2 {
  text-transform: uppercase;
  text-align: center;
  position: relative;
  font-size: 17px;
  padding: 10px;
  background: rgba(0, 0, 0, 0.6);
}

.hovereffect p {
  text-transform: uppercase;
  text-align: center;
  position: relative;
  font-size: 10px;
  margin-bottom : 10px;
  background: rgba(0, 0, 0, 0.6);
}

.hovereffect div.tooltip {
  display: inline-block;
  text-decoration: none;
  padding: 7px 14px;
  border: 1px solid #fff;
  margin: 5px 0 0 0;
  background-color: transparent;
}

.hovereffect div.tooltip:hover {
  box-shadow: 0 0 5px #fff;
}

.hovereffect div.tooltip, .hovereffect h2, .hovereffect p {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
  -webkit-transition: all 0.4s ease-in;
  transition: all 0.4s ease-in;
  opacity: 0;
  filter: alpha(opacity=0);
  color: #fff;
  text-transform: uppercase;
}

.hovereffect:hover div.tooltip, .hovereffect:hover h2, .hovereffect:hover p {
  opacity: 1;
  filter: alpha(opacity=100);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black;
  width: 40%;
  height: 30%;
}

.tooltipSpecial {
  position: static;
  display: inline;
}

.tooltip .tooltiptext, .tooltipSpecial .tooltiptext {
  visibility: hidden;
  width: 100%;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
  top: 100%;
  left: 50%;
  margin-left: -60px;
}

.tooltipSpecial .tooltiptext {
  margin-left: -20px;
}

.tooltiptext {
  font-size: 12pt;
}

.tooltip:hover .tooltiptext, .tooltipSpecial:hover .tooltiptext {
  visibility: visible;
}

.gitPic, .webPic, .filePic, .moreInfoPic {
  width: 100%;
  height: 100%;
  border-radius: 100%;
  cursor: pointer;
}

.email:hover {
  text-decoration: underline;
  cursor: default;
}

.otherGithubLink, .otherGithubLink:hover {
  color: #8c8c8c;
}

.row:not(.paragraphInfoRow) {
  margin-top: 30px;
}

#hstatPhoto, #pacePhoto {
  width: 300px;
  height: 300px;
  margin-top: 10px;
  border-radius: 11%;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
  -webkit-transition: all 0.4s ease-in;
  transition: all 0.4s ease-in;
  cursor: pointer;
}

#hstatPhoto:hover, #pacePhoto:hover {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

#pacePhoto {
  background-color: white;
}

.hstatPhotoDiv {
  position: static;
  width: 50vw;
}

.paceDiv {
  position: static;
  width: 50vw;
}

.linkedInPic {
  width: 16px;
  height: 16px;
  cursor: pointer;
}

.gitPhotoLink, .otherAccountProfilePic {
  width: 20px;
  height: 20px;
  border-radius: 100%;
  cursor: pointer;
}

.hstatHeader, .paceHeader {
  margin-bottom: 15px;
}

#text {
  width: 400px;
  height: 200px;
  resize: none;
}

.submitText-case {
  width: 400px;
}

.switch {
  position: relative;
  display: inline-block;
  width: 90px;
  height: 34px;
}
/* ... */

